# parallax-voice-office

./: .env.example  .gitignore  Dockerfile  HOW-IT-WORKS.md  METADATA_GUIDE.md  Makerfile  README.md  README_OLD.md  TASKS.md  VOICE_GUIDE.md  backup_manager.py  config_validator.py  db_optimizer.py  docker-compose.yml  docker-entrypoint.sh  docker-setup.sh  file_crud_plugin.py  gallery_template.html  install.py  mcp_config.json  mcp_file_server.py  mcp_http_client.py  mcp_json_parser.py  mcp_manager.py  mcp_web_search.py  network_test.py  obp-CLI.py  obp-GUI.py  processor_config.yaml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup_environment.py  setup_https.py  test_connection.py  test_mcp_integration.py
task_configs/: chain_tasks.yaml  code_tasks.yaml  create_tasks.yaml  process_tasks.yaml  search_tasks.yaml
tests/: README.md  __init__.py  test_backup_manager.py  test_config_validator.py  test_db_optimizer.py
